--- a/service.html
+++ b/service.html
@@ -102,9 +102,9 @@
                             <img class="img-fluid" src="img/haircut.png" alt="">
                         </div>
                         <div class="ps-4">
-                            <h3 class="text-uppercase mb-3">Haircut</h3>
-                            <p>Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam.</p>
-                            <span class="text-uppercase text-primary">From $15</span>
+                            <h3 class="text-uppercase mb-3">locs</h3>
+                            <p> STARTER LOC/  30K INSTANT LOC 50K/  LOC RETWIST/20K  INTERLOCKING 25K  /  LOC STYLING 5K/  WASHING OF LOCS 5K/   LOC TREATMENT/15K</p>
+                            <span class="text-uppercase text-primary">From 5K</span>
                         </div>
                         <a class="btn btn-square" href=""><i class="fa fa-plus text-primary"></i></a>
                     </div>
@@ -115,9 +115,9 @@
                             <img class="img-fluid" src="img/beard-trim.png" alt="">
                         </div>
                         <div class="ps-4">
-                            <h3 class="text-uppercase mb-3">Beard Trim</h3>
-                            <p>Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam.</p>
-                            <span class="text-uppercase text-primary">From $15</span>
+                            <h3 class="text-uppercase mb-3">PIERCINGS</h3>
+                            <p>STANDARD LOBE 5K EACH  TRANSVERSE LOBE/6K HELIX/FORWARD HELIX/7K OUTERCONCH/INNERCONCH 7K  TRAGUS /7K OUTER TRAGUS/10K     NOSE PIERCING /5K    INDUSTRIAL/15K ORBITAL 8K SMILEY 8K SEPTUM 8K NAVEL/15K NIPPLE 10K EACH</p>
+                            <span class="text-uppercase text-primary">From 5K</span>
                         </div>
                         <a class="btn btn-square" href=""><i class="fa fa-plus text-primary"></i></a>
                     </div>
@@ -129,8 +129,8 @@
                         </div>
                         <div class="ps-4">
                             <h3 class="text-uppercase mb-3">Mans Shave</h3>
-                            <p>Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam.</p>
-                            <span class="text-uppercase text-primary">From $15</span>
+                            <p>Different Types of hair cut available</p>
+                            <span class="text-uppercase text-primary">From 3K</span>
                         </div>
                         <a class="btn btn-square" href=""><i class="fa fa-plus text-primary"></i></a>
                     </div>
@@ -141,9 +141,9 @@
                             <img class="img-fluid" src="img/hair-dyeing.png" alt="">
                         </div>
                         <div class="ps-4">
-                            <h3 class="text-uppercase mb-3">Hair Dyeing</h3>
-                            <p>Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam.</p>
-                            <span class="text-uppercase text-primary">From $15</span>
+                            <h3 class="text-uppercase mb-3">tattoos</h3>
+                            <p>1 letter 3k   5 letter 15k  Italian B medium (6*6) 45k  minor art 20k  Italian small letter (6*6)35k     Block letter (8*8)75k  Half sleeve sketching 250k   Half sleeve writeup 350     full sleeve sketching /450   full writeup 700     Cover ups double normal price  Home service double normal price</p>
+                            <span class="text-uppercase text-primary">From 3K</span>
                         </div>
                         <a class="btn btn-square" href=""><i class="fa fa-plus text-primary"></i></a>
                     </div>
@@ -154,9 +154,9 @@
                             <img class="img-fluid" src="img/mustache.png" alt="">
                         </div>
                         <div class="ps-4">
-                            <h3 class="text-uppercase mb-3">Mustache</h3>
-                            <p>Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam.</p>
-                            <span class="text-uppercase text-primary">From $15</span>
+                            <h3 class="text-uppercase mb-3">Hair Barbing</h3>
+                            <p>Book an Appointment for Exclusive Hair cut</p>
+                            <span class="text-uppercase text-primary">From 3K</span>
                         </div>
                         <a class="btn btn-square" href=""><i class="fa fa-plus text-primary"></i></a>
                     </div>
@@ -168,8 +168,8 @@
                         </div>
                         <div class="ps-4">
                             <h3 class="text-uppercase mb-3">Stacking</h3>
-                            <p>Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam.</p>
-                            <span class="text-uppercase text-primary">From $15</span>
+                            <p>Hair TREATMENT available</p>
+                            <span class="text-uppercase text-primary">From 5K</span>
                         </div>
                         <a class="btn btn-square" href=""><i class="fa fa-plus text-primary"></i></a>
                     </div>
@@ -180,33 +180,7 @@
     <!-- Service End -->
 
 
-    <!-- Testimonial Start -->
-    <div class="container-xxl py-5">
-        <div class="container">
-            <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
-                <p class="d-inline-block bg-secondary text-primary py-1 px-4">Testimonial</p>
-                <h1 class="text-uppercase">What Our Clients Say!</h1>
-            </div>
-            <div class="owl-carousel testimonial-carousel wow fadeInUp" data-wow-delay="0.1s">
-                <div class="testimonial-item text-center" data-dot="<img class='img-fluid' src='img/testimonial-1.jpg' alt=''>">
-                    <h4 class="text-uppercase">Client Name</h4>
-                    <p class="text-primary">Profession</p>
-                    <span class="fs-5">Clita clita tempor justo dolor ipsum amet kasd amet duo justo duo duo labore sed sed. Magna ut diam sit et amet stet eos sed clita erat magna elitr erat sit sit erat at rebum justo sea clita.</span>
-                </div>
-                <div class="testimonial-item text-center" data-dot="<img class='img-fluid' src='img/testimonial-2.jpg' alt=''>">
-                    <h4 class="text-uppercase">Client Name</h4>
-                    <p class="text-primary">Profession</p>
-                    <span class="fs-5">Clita clita tempor justo dolor ipsum amet kasd amet duo justo duo duo labore sed sed. Magna ut diam sit et amet stet eos sed clita erat magna elitr erat sit sit erat at rebum justo sea clita.</span>
-                </div>
-                <div class="testimonial-item text-center" data-dot="<img class='img-fluid' src='img/testimonial-3.jpg' alt=''>">
-                    <h4 class="text-uppercase">Client Name</h4>
-                    <p class="text-primary">Profession</p>
-                    <span class="fs-5">Clita clita tempor justo dolor ipsum amet kasd amet duo justo duo duo labore sed sed. Magna ut diam sit et amet stet eos sed clita erat magna elitr erat sit sit erat at rebum justo sea clita.</span>
-                </div>
-            </div>      
-        </div>
-    </div>
-    <!-- Testimonial End -->
+    
 
 
     <!-- Footer Start -->
