--- a/index.html
+++ b/index.html
@@ -547,20 +547,20 @@
                 <h1 class="text-uppercase">What Our Clients Say!</h1>
             </div>
             <div class="owl-carousel testimonial-carousel wow fadeInUp" data-wow-delay="0.1s">
-                <div class="testimonial-item text-center" data-dot="<img class='img-fluid' src='img/testimonial-1.jpg' alt=''>">
+                <div class="testimonial-item text-center" data-dot="<img class='img-fluid' src='img/IMG_8250.jpg' alt=''>">
                     <h4 class="text-uppercase">Client Name</h4>
                     <p class="text-primary">Profession</p>
-                    <span class="fs-5">Clita clita tempor justo dolor ipsum amet kasd amet duo justo duo duo labore sed sed. Magna ut diam sit et amet stet eos sed clita erat magna elitr erat sit sit erat at rebum justo sea clita.</span>
+                    <span class="fs-5">The hair services offered at the salon were top-notch. The hairstylists were knowledgeable and experienced, providing expert advice on the best styles and cuts that would suit my preferences.</span>
                 </div>
-                <div class="testimonial-item text-center" data-dot="<img class='img-fluid' src='img/testimonial-2.jpg' alt=''>">
+                <div class="testimonial-item text-center" data-dot="<img class='img-fluid' src='img/moore touch (13).JPG' alt=''>">
                     <h4 class="text-uppercase">Client Name</h4>
                     <p class="text-primary">Profession</p>
-                    <span class="fs-5">Clita clita tempor justo dolor ipsum amet kasd amet duo justo duo duo labore sed sed. Magna ut diam sit et amet stet eos sed clita erat magna elitr erat sit sit erat at rebum justo sea clita.</span>
+                    <span class="fs-5">They took the time to listen to my needs and delivered results that exceeded my expectations.</span>
                 </div>
-                <div class="testimonial-item text-center" data-dot="<img class='img-fluid' src='img/testimonial-3.jpg' alt=''>">
+                <div class="testimonial-item text-center" data-dot="<img class='img-fluid' src='img/moore touch (3).JPG.jpg' alt=''>">
                     <h4 class="text-uppercase">Client Name</h4>
                     <p class="text-primary">Profession</p>
-                    <span class="fs-5">Clita clita tempor justo dolor ipsum amet kasd amet duo justo duo duo labore sed sed. Magna ut diam sit et amet stet eos sed clita erat magna elitr erat sit sit erat at rebum justo sea clita.</span>
+                    <span class="fs-5">Overall, the salon provided a welcoming and friendly atmosphere. The staff was attentive and accommodating, making sure that all my questions were answered and that I felt satisfied with the services provided.</span>
                 </div>
             </div>      
         </div>
