--- a/index.html
+++ b/index.html
@@ -58,7 +58,6 @@
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                     <div class="dropdown-menu m-0">
                         <a href="price.html" class="dropdown-item">Pricing Plan</a>
-                        <a href="team.html" class="dropdown-item">Our Barber</a>
                         <a href="open.html" class="dropdown-item">Working Hours</a>
                         <a href="testimonial.html" class="dropdown-item">Testimonial</a>
                         <a href="404.html" class="dropdown-item">404 Page</a>
@@ -557,7 +556,7 @@
                     <p class="text-primary">Profession</p>
                     <span class="fs-5">They took the time to listen to my needs and delivered results that exceeded my expectations.</span>
                 </div>
-                <div class="testimonial-item text-center" data-dot="<img class='img-fluid' src='img/moore touch (3).JPG.jpg' alt=''>">
+                <div class="testimonial-item text-center" data-dot="<img class='img-fluid' src='img/moore touch (3).jpg' alt=''>">
                     <h4 class="text-uppercase">Client Name</h4>
                     <p class="text-primary">Profession</p>
                     <span class="fs-5">Overall, the salon provided a welcoming and friendly atmosphere. The staff was attentive and accommodating, making sure that all my questions were answered and that I felt satisfied with the services provided.</span>
